--- a/app/views/layouts/simplestone.html.erb
+++ b/app/views/layouts/simplestone.html.erb
@@ -34,9 +34,9 @@
               <span class="item"><%= link_to 'Editors', editors_path %></span>
             <% end %>
             <% unless logged_in? %>
-              <span class="item"><%= link_to 'Login', new_session_url %>  </span>
+              <span class="item"><%= instance_eval &SIMPLESTONE[:login_link_proc] || link_to('Login', new_session_url) %>  </span>
             <% else %>
-              <span class="item"><%= link_to 'Logout', session_url, :method => :delete %></span>
+              <span class="item"><%= instance_eval &SIMPLESTONE[:logout_link_proc] || link_to('Logout', session_url, :method => :delete) %></span>
             <% end %>
           </div>
         </div>
