Make sure robots don't index the admin pages.

--- a/app/views/layouts/simplestone.html.erb
+++ b/app/views/layouts/simplestone.html.erb
@@ -5,6 +5,7 @@
   <head>
     <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
     <title>Simplestone<%= " :: #{@page_title.downcase}" if @page_title %></title>
+    <meta name="ROBOTS" content="NOARCHIVE, NOINDEX" />
     <%= stylesheet_link_tag 'screen' %>
     
     <!--[if IE]><%= stylesheet_link_tag 'ie' %><![endif]-->
