Allow the class name and "name" identifier of the user model to be completely configurable. Backwards compatible, too!

--- a/app/views/audits/index.html.erb
+++ b/app/views/audits/index.html.erb
@@ -2,7 +2,7 @@
 <% @audits.each do |audit| -%>
 <li>
   <%= audit.created_at.to_s(:short) %>
-  <%= audit.editor.user.name %>
+  <%= audit.editor.user.send(SIMPLESTONE[:user_identifier]) %>
   <%= audit.event %>
   <%= audit.record ? h(audit.record.title) : '-' %>
 </li>
