--- a/generators/simplestone/templates/stylesheets/simplestone/simplestone.css
+++ b/generators/simplestone/templates/stylesheets/simplestone/simplestone.css
@@ -10,14 +10,14 @@ body, p, ol, ul, td {
 }
 
 #header{
-  width: 100%;
   background-color: #1E1E1E;
   color: #D8D8D8;
-  padding: 0.8em 0.2em 0.1em;
+  padding: 14px;
 }
 
 #header h1, #header h2,#header h3,#header h4{
   color: #D8D8D8;
+  margin: 0;
 }
 
 #header a, #header a:visited{
@@ -28,13 +28,12 @@ body, p, ol, ul, td {
   width: 100%;
   background-color: #fafafa;
   min-height: 380px;
-
+  padding-bottom: 6px;
 }
 
 #footer{
-  width: 100%;
-  background-color: #e64117;
-  padding: 0.2em 0;
+  background-color: #888;
+  padding: 4px;
 }
 
 .footer, .footer a, .footer a:visited{
@@ -48,21 +47,33 @@ body, p, ol, ul, td {
 }
 
 .menubar{
-  padding: 0.3em 0.6em 0.3em 0.2em;
+  padding: 8px 0 0;
   text-align: right;
 }
 
-.menubar a, .menubar a:visited{
+.menubar a, 
+.menubar a:visited{
   color: #ffffff;
   text-decoration: none;
-}
-
-.menubar .item{
-  padding: 0.2em 1em;
-  margin-bottom: 0.2em;
+  padding: 4px 10px;
+  margin-bottom: 0;
   font-size: 1.2em;
+  display: inline-block;
+  -moz-border-radius: 9px 9px 0 0;
+  -webkit-border-radius: 9px 9px 0 0;
+}
+.menubar a:hover {
+  color: #bef;
+}
+.menubar a.active {
+  font-weight: bold;
+  background: white;
+  color: black;
 }
 
+.session-link {
+  float: right;
+}
 
 #form-panel{
   margin: 1em;
